# riley-cpp-utils

./: CMakeLists.txt  README.md
include/r3/string/: r3-string-utils.hpp
licenses/: RileyCppUtils-mit-license.txt  licenses.txt
src/main/r3/string/: CMakeLists.txt  r3-StringUtils.cpp
src/main/r3/validation/: CMakeLists.txt  r3-validation-IntRange.cpp
src/test/r3/string/: CMakeLists.txt  StringUtilsTests-main.cpp
src/test/r3/validation/: CMakeLists.txt  IntRangeTests-main.cpp
